# background_manager

./: .gitignore  Cargo.toml  LICENSE-MIT  readme.md
examples/: resize.rs  windows_stuff.rs
src/: image_proc.rs  logic.rs  main.rs
src/mac/: mod.rs
src/os_level/: mod.rs
src/os_level/mac/: mod.rs
src/os_level/win/: mod.rs
