[package]
name = "background_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
photon-rs = { version = "0.3.3", default-features = false }
regex = "1.12.2"
slint = "1.14.1"
tray-item = "0.10.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Graphics_Gdi",
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_UI_Shell",
] }

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1 # Optional: set a lower optimization level for your own code

[build-dependencies]
slint-build = "1.14.1"
